--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Sonarscanner for dotnet
       uses: Secbyte/dotnet-sonarscanner@v2.3
       with:
-        projectKey: julioarruda
+        projectKey: julioarruda_AmberEggApi
         projectName: AmberEggApi
         buildCommand: dotnet build src/.
         sonarOrganisation: julioarruda
