--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -44,15 +44,16 @@ jobs:
         New-Item -Path .\.sonar\scanner -ItemType Directory
         dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
-    - name: Build and analyze
+    - name: Build, Test and analyze
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       shell: pwsh
       run: |
         .\.sonar\scanner\dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.exclusions="**/obj/**,**/*.dll" /d:sonar.cs.opencover.reportsPaths="${{ github.workspace }}/**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="${{ github.workspace }}/*.trx"
-        dotnet build src/. --configuration Release --no-restore
-        .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"               
+        dotnet build src/. -c Release --no-restore
+        dotnet test -c Release --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx
+        .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"            
         
     - name: Publish
       run: dotnet publish -c Release -o '${{ github.workspace }}/out'
