--- a/src/AmberEggApi.WebApi/appsettings.json
+++ b/src/AmberEggApi.WebApi/appsettings.json
@@ -1,14 +1,13 @@
 {
+  "ConnectionStrings": {
+    "ApiDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AmberEgg.Api.Db.Local;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MongoSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "Companies"
-  },
+  "AllowedHosts": "*",  
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
