--- a/src/AmberEggApi.Integration.Tests/AmberEggApi.Integration.Tests.csproj
+++ b/src/AmberEggApi.Integration.Tests/AmberEggApi.Integration.Tests.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="16.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
