--- a/src/AmberEggApi.WebApi/appsettings.Local.json
+++ b/src/AmberEggApi.WebApi/appsettings.Local.json
@@ -1,28 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "MongoSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "Companies"
-  },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      { "Name": "LiterateConsole" }
-    ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
-    "Properties": {
-      "Application": "AmberEggApi.WebApi"
-    }
+  "ConnectionStrings": {
+    "ApiDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AmberEgg.Api.Db.Local;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
