add unit tests add console logger remove serilog

--- a/src/Api.Common.WebServer.Tests/Api.Common.WebServer.Tests.csproj
+++ b/src/Api.Common.WebServer.Tests/Api.Common.WebServer.Tests.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AmberEggApi.Infrastructure\AmberEggApi.Infrastructure.csproj" />
     <ProjectReference Include="..\Api.Common.WebServer\Api.Common.WebServer.csproj" />
   </ItemGroup>
 
