Upgrade to .NET 5.0

--- a/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
+++ b/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <ProjectGuid>{F60EBC60-4C92-4C01-947C-2F9ED18A3B18}</ProjectGuid>
   </PropertyGroup> 
 
   <ItemGroup>    
-    <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup> 
 
