--- a/src/Api.Common.Contracts/Api.Common.Contracts.csproj
+++ b/src/Api.Common.Contracts/Api.Common.Contracts.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <ProjectGuid>{F2EDD5AF-AE53-4F1A-A921-97E40E88413D}</ProjectGuid>
