--- a/src/Api.Common.Cqrs.Core/Api.Common.Cqrs.Core.csproj
+++ b/src/Api.Common.Cqrs.Core/Api.Common.Cqrs.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <ProjectGuid>{2353976C-7698-4D15-8C04-6EB55CD6E8EE}</ProjectGuid>
