--- a/src/Api.Common.Repository.Contracts.Core/Api.Common.Repository.csproj
+++ b/src/Api.Common.Repository.Contracts.Core/Api.Common.Repository.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <ProjectGuid>{5479439B-0A47-4184-92F6-3FF2D03EEF23}</ProjectGuid>
