--- a/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
+++ b/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup> 
 
   <ItemGroup>    
-    <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Autofac" Version="6.1.0" />    
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup> 
 
   <ItemGroup>
