--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Content list
+      uses: enricomarino/actions@v2
+      with:      
+        source: /
     - name: Restore dependencies
       run: dotnet restore
       working-directory: /AmberEggApi/src
