--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -21,16 +21,16 @@ jobs:
       run: ls
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: /AmberEggApi/src
+      working-directory: /src
     - name: Build
       run: dotnet build --no-restore
-      working-directory: /AmberEggApi/src
+      working-directory: /src
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: /AmberEggApi/src
+      working-directory: /src
     - name: Publish
       run: dotnet publish AmberEggApi.ApplicationService/AmberEggApi.ApplicationService.csproj -c Release -o release — nologo
-      working-directory: /AmberEggApi/src
+      working-directory: /src
     - name: Content list
       uses: enricomarino/actions@v2
       with:      
