--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -38,6 +38,7 @@ jobs:
 
     - name: Install project dependencies
       run: dotnet restore
+      working-directory: src
 
     - name: Test and analyze
       env:
@@ -50,3 +51,4 @@ jobs:
 
     - name: Build
       run: dotnet build --configuration Release --no-restore
+      working-directory: src
