--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -16,10 +16,14 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 8.0.x        
+        dotnet-version: 8.0.x       
+
+    - name: Setup Java
+      uses: actions/setup-java@v4.0.0
+      with:        
+        java-version: 17
         
-    - name: Setup SonarCloud Scanner
-      if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+    - name: Setup SonarCloud Scanner      
       run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
       working-directory: src
 
