--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -34,9 +34,9 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}      
       run: |
         ./.sonar/scanner/dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vstest.reportsPaths=TestResults/*.trx /d:sonar.cs.opencover.reportsPaths=TestResults/*/coverage.opencover.xml /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"           /d:sonar.coverage.exclusions="**/*Test.cs,*Tests/**" 
-
+        dotnet restore
         dotnet build --no-incremental                      
-        dotnet test  --collect:"Code Coverage" --results-directory TestResults/ --logger "trx;LogFileName=unittests.trx" --no-build --no-restore --configuration release           
+        dotnet test  --collect:"Code Coverage" --results-directory TestResults/ --logger "trx;LogFileName=unittests.trx" --no-build --no-restore --configuration release
 
         ./.sonar/scanner/dotnet-sonarscanner end
       working-directory: src
