--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -18,27 +18,19 @@ jobs:
       with:
         dotnet-version: 8.0.x       
 
-    - name: Setup Java
-      uses: actions/setup-java@v4.0.0
-      with:        
-        java-version: 17
-        distribution: temurin
-        
-    - name: Setup SonarCloud Scanner      
-      run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
+    - name: Test
+      run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover -l trx
       working-directory: src
 
-    - name: Test and analyze
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}      
-      run: |
-        ./.sonar/scanner/dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.host.url="https://sonarcloud.io" 
-        
-        dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover -l trx
-
-        ./.sonar/scanner/dotnet-sonarscanner end
-      working-directory: src
+    - name: Analyze with SonarCloud
+      uses: sonarsource/sonarcloud-github-action@master
+      with:
+        projectBaseDir: src
+        args: >
+          -Dsonar.organization="${{ secrets.SONAR_ORGANIZATION }}"
+          -Dsonar.projectKey="${{ secrets.PROJECT_KEY }}"
+          -Dsonar.cs.opencover.reportPaths=coverage.xml
+          -Dsonar.verbose=true
   
     - name: Build
       run: dotnet build --configuration Release --no-restore
