--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -43,3 +43,6 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
       with:
         projectBaseDir: src  
+        args: >
+          -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+          -Dsonar.projectKey=${{ secrets.PROJECT_KEY }}
